# ECGEN

./: .env.example  .gitignore  CHANGELOG_PULSE2PULSE.md  CHANGES.md  CLAUDE.md  CONFIG_USAGE.md  DOCS_MAINTENANCE.md  DOCS_QUICK_REFERENCE.md  DOCS_TROUBLESHOOTING.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_SETUP.md  DOCUMENTATION_SUMMARY.md  INSTALLATION_AND_VERIFICATION.md  INSTALLATION_NOTES.md  LICENSE  MIGRATION_GUIDE.md  QUICKSTART_PULSE2PULSE.md  QUICKSTART_VAE.md  QUICK_START.md  README.md  README_PULSE2PULSE.md  README_VAE_VISUALIZATION.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  SHELL_SCRIPTS_FIXED.md  TODO_upload_hf.md  TRAINING_GUIDE.md  TRAIN_VAE_NOW.md  VAE_MIMIC_TRAINING.md  VAE_SUMMARY.md  VISUALIZATION_SUMMARY.md  VQVAE_IMPLEMENTATION.md  WANDB_INTEGRATION_SUMMARY.md  WANDB_QUICKSTART.md  docs_serve.sh  fix_installation.sh  generate_example.py  mkdocs.yml  pyproject.toml  upload_checkpoints_example.py  (+1 more)
.github/workflows/: docs.yml  publish.yml
configs/: README.md  upload_checkpoints.yaml
configs/dataset/: mimic.yaml
data/: README.md  __init__.py
docs/: README.md  VAE_MODEL.md  VAE_QUICKSTART.md  VAE_VISUALIZATION.md  index.md  project_structure.md  pulse2pulse_training.md  wandb_setup.md
evaluation/: README.md  __init__.py  benchmark.py  visualize.py
models/: README.md  __init__.py
scripts/: README.md  README_TRAINING.md  README_VAE_MIMIC.md  README_VAE_TRAINING.md  README_VISUALIZATION.md  export_predictions.sh  run_sweep.sh  run_train.sh  run_train_pulse2pulse_mimic.sh  run_train_pulse2pulse_standalone.sh  run_train_vae_mimic.sh  run_train_vae_mimic_config.sh  run_train_vae_mimic_quick.sh  test_models_only.py  train_pulse2pulse.py  train_vae.py  train_vae.sh  train_vae_full.py  train_vae_mimic.py  train_vae_quick.sh  upload_checkpoints_to_hf.py
single_file/: FIXES.md  QUICK_START.md  README.md  SUMMARY.md  WANDB_GUIDE.md  run_train_vqvae.sh  test_data_loading.py  train_vqvae_standalone.py
tests/: __init__.py  test_upload_hf.py  test_vae.py
training/: README.md  __init__.py
utils/: __init__.py  io.py  logging.py
visualization/: README.md  __init__.py  ecg_plots.py  latent_space.py  training_curves.py
(+128 files in other folders)
