[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgen"
dynamic = ["version"]
description = "ECG generation and modeling experiments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pyyaml",
    "pytorch-lightning",
    "pandas",
    "scikit-learn",
    "wfdb",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20"]

[project.urls]
Homepage = "https://github.com/vlbthambawita/ECGEN"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "ecgen.__version__" }
