[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgen"
dynamic = ["version"]
description = "ECG generation and modeling experiments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pyyaml",
    "pytorch-lightning",
    "pandas",
    "scikit-learn",
    "wfdb",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20", "python-dotenv>=1.0"]
plot = ["cairosvg>=2.5"]
all  = ["huggingface_hub>=0.20", "python-dotenv>=1.0", "cairosvg>=2.5"]

[project.urls]
Homepage = "https://github.com/vlbthambawita/ECGEN"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/ecgen/_version.py"
